@@ -30,6 +30,7 @@ limits with the --with-rlimit-*=value option to configure.
 not really needed for anything, and just slows things down.
 	<LI>Fixed malloc() error check in GetUserDir routines
 	<LI>Fixed race condition with permissions and opening of log file
+	<LI>initgroups() and setgroups() support now enabled by default
 </UL>
 
 <P><H3>New in version 3.5:</H3><UL>
