@@ -33,6 +33,7 @@
        is not really needed for anything, and just slows things down.
      * Fixed malloc() error check in GetUserDir routines
      * Fixed race condition with permissions and opening of log file
+     * initgroups() and setgroups() support now enabled by default
        
   New in version 3.5:
   
